app/assets/stylesheets/dashboard.css.scss
// Place all the styles related to the Dashboard controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

// General


// Admin Dashboard


// PM Dashboard

#pm-dash {
	padding-top: 40px;
	.pm-dash-row {
		display: inline-flex;
		display: -webkit-inline-flex;
		width: 110%;
		.pm-book-table {
			margin-right: 40px;
		}
	}
}

.calendar-frame {
	border: solid 1px black;
	height:	200px;
	width: 200px;
	.day-names {
		border-bottom: solid 1px gray;
		display: inline-flex;
		width: 100%;
		p {
			line-height: 1px;
			text-align: center;
			width: 14.285%;
		}
	}
	.month-days {
		line-height: 28px;
		width: 100%;
		.date {
			display: inline-flex;
			padding-left: 8px;
			text-align: right;
			width: 24px;
		}
		.date:nth-child(7):after {
			content:"\A"; 
			white-space:pre;
		}
		.date:nth-child(14):after {
			content:"\A"; 
			white-space:pre;
		}
		.date:nth-child(21):after {
			content:"\A"; 
			white-space:pre;
		}
		.date:nth-child(28):after {
			content:"\A"; 
			white-space:pre;
		}
	}
}

// Author Dashboard


// Team Member Dashboard

